YUK-4269 - Moved LiteAddress to common - Removed Address cache from LSEC - Replaced jdbc code with Spring's JdbcTemplate